# swagger.yaml
@@ -263,6 +263,18 @@ paths:
               name: id
               in: path
               required: true
+        get:
+            tags:
+                - entry
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: '#/definitions/entry'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/error'
         put:
             tags:
                 - entry
@@ -339,6 +351,18 @@ paths:
               name: id
               in: path
               required: true
+        get:
+            tags:
+                - category
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: '#/definitions/category'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/error'
         put:
             tags:
                 - category
@@ -421,6 +445,18 @@ paths:
               name: id
               in: path
               required: true
+        get:
+            tags:
+                - category
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: '#/definitions/category_multi_choice'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/error'
         put:
             tags:
                 - category
@@ -503,6 +539,18 @@ paths:
               name: id
               in: path
               required: true
+        get:
+            tags:
+                - category
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: '#/definitions/category_single_choice_group'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/error'
         put:
             tags:
                 - category
@@ -585,6 +633,18 @@ paths:
               name: id
               in: path
               required: true
+        get:
+            tags:
+                - category
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: '#/definitions/category_single_choice'
+                default:
+                    description: Error
+                    schema:
+                        $ref: '#/definitions/error'
         put:
             tags:
                 - category
